--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/uytyks/FazeWell#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "firebase": "^10.6.0"
+    "firebase": "^10.6.0",
+    "firebase-admin": "12.0.0"
   }
 }
